--- a/tasks/liquibase-status.yaml
+++ b/tasks/liquibase-status.yaml
@@ -1,12 +1,10 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: liquibase-status
 spec:
   params:
-    - name: jdbc-database-url
-    - name: jdbc-database-user
-    - name: jdbc-database-pass
+    - name: jdbc-database-secret
     - name: root-changelog-file
   results:
     - name: status-message
@@ -18,21 +16,37 @@ spec:
       script: |
         #!/usr/bin/env bash
 
-        status_liquibase=$(/liquibase/liquibase \
+        /liquibase/liquibase \
           --defaultsFile=liquibase.properties \
           --changelog-file=$(params.root-changelog-file) \
-          --url=$(params.jdbc-database-url) \
-          --username=$(params.jdbc-database-user) \
-          --password=$(params.jdbc-database-pass) \
-          status --verbose)
+          --url="${JDBC_DATABASE_URL}" \
+          --username="${JDBC_DATABASE_USER}" \
+          --password="${JDBC_DATABASE_PASS}" \
+          status --verbose > status.log
 
-        # echo "status -> $status_liquibase"
+        cat status.log
 
-        if [[ $status_liquibase =~ "is up to date" ]]; then
+        if [[ "$(cat status.log)" =~ "is up to date" ]]; then
           echo -n "yes" >> $(results.status-message.path)
         else
           echo -n "no" >> $(results.status-message.path)
         fi
+      env:
+        - name: JDBC_DATABASE_URL
+          valueFrom:
+            secretKeyRef:
+              name: $(params.jdbc-database-secret)
+              key: database-url
+        - name: JDBC_DATABASE_USER
+          valueFrom:
+            secretKeyRef:
+              name: $(params.jdbc-database-secret)
+              key: database-user
+        - name: JDBC_DATABASE_PASS
+          valueFrom:
+            secretKeyRef:
+              name: $(params.jdbc-database-secret)
+              key: database-pass
 
   workspaces:
     - name: source
