--- a/tasks/liquibase-tag-exists.yaml
+++ b/tasks/liquibase-tag-exists.yaml
@@ -1,14 +1,16 @@
 apiVersion: tekton.dev/v1
 kind: Task
 metadata:
-  name: liquibase-rollback-sql
+  name: liquibase-tag-exists
 spec:
   params:
     - name: jdbc-database-secret
-    - name: root-changelog-file
     - name: liquibase-tag
+  results:
+    - name: tag-exists-message
+      description: liquibase tag-exists message
   steps:
-    - name: liquibase-rollback-sql
+    - name: liquibase-tag-exists
       image: liquibase/liquibase:4.13.0
       workingDir: $(workspaces.source.path)
       script: |
@@ -16,12 +18,19 @@ spec:
 
         /liquibase/liquibase \
           --defaultsFile=liquibase.properties \
-          --changelog-file=$(params.root-changelog-file) \
           --url="${JDBC_DATABASE_URL}" \
           --username="${JDBC_DATABASE_USER}" \
           --password="${JDBC_DATABASE_PASS}" \
           --tag="${db-tag}" \
-          rollback-sql
+          tag-exists > tag-exists.log
+
+        cat tag-exists
+
+        if [[ "$(cat tag-exists)" =~ "already exists" ]]; then
+          echo -n "yes" >> $(results.tag-exists-message.path)
+        else
+          echo -n "no" >> $(results.tag-exists-message.path)
+        fi
       env:
         - name: JDBC_DATABASE_URL
           valueFrom:
