--- a/tasks/liquibase-diff.yaml
+++ b/tasks/liquibase-diff.yaml
@@ -8,7 +8,7 @@ spec:
     - name: database-type
   steps:
     - name: liquibase-diff
-      image: liquibase/liquibase:4.13.0
+      image: liquibase:4.31.0
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
