--- a/tasks/liquibase-rollback-sql.yaml
+++ b/tasks/liquibase-rollback-sql.yaml
@@ -9,7 +9,7 @@ spec:
     - name: liquibase-tag
   steps:
     - name: liquibase-rollback-sql
-      image: liquibase/liquibase:4.13.0
+      image: liquibase:4.31.0
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
