--- a/tasks/liquibase-snapshot.yaml
+++ b/tasks/liquibase-snapshot.yaml
@@ -7,7 +7,7 @@ spec:
     - name: jdbc-database-secret
   steps:
     - name: liquibase-snapshot
-      image: liquibase/liquibase:4.13.0
+      image: liquibase:4.31.0
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
