--- a/tasks/liquibase-tag.yaml
+++ b/tasks/liquibase-tag.yaml
@@ -8,7 +8,7 @@ spec:
     - name: git-revision
   steps:
     - name: liquibase-tag
-      image: liquibase/liquibase:4.13.0
+      image: liquibase:4.31.0
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
