--- a/tasks/liquibase-update-testing-rollback.yaml
+++ b/tasks/liquibase-update-testing-rollback.yaml
@@ -8,7 +8,7 @@ spec:
     - name: root-changelog-file
   steps:
     - name: liquibase-update
-      image: liquibase/liquibase:4.13.0
+      image: liquibase:4.31.0
       workingDir: $(workspaces.source.path)
       script: |
         #!/usr/bin/env bash
