fixes to eventlistener and trigger-binding

--- a/events/eventlistener-multi-tag.yaml
+++ b/events/eventlistener-multi-tag.yaml
@@ -50,8 +50,7 @@ spec:
           params:
             - name: "filter"
               value: >-
-                body.ref_type in ['tag'] &&
-                body.master_branch in ['main', 'master']
+                body.ref_type in ['tag']
       bindings:
         - ref: liquibase-pipeline-tag-binding
         - ref: prod-env
