--- a/tasks/liquibase-update-testing-rollback.yaml
+++ b/tasks/liquibase-update-testing-rollback.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1
 kind: Task
 metadata:
-  name: liquibase-update
+  name: liquibase-update-testing-rollback
 spec:
   params:
     - name: jdbc-database-secret
@@ -38,4 +38,3 @@ spec:
               key: database-pass
   workspaces:
     - name: source
-
