add tasks documentation

--- a/tasks/liquibase-updatesql.yaml
+++ b/tasks/liquibase-updatesql.yaml
@@ -19,7 +19,7 @@ spec:
         --url="${JDBC_DATABASE_URL}" \
         --username="${JDBC_DATABASE_USER}" \
         --password="${JDBC_DATABASE_PASS}" \
-        updateSQL
+        update-sql
       env:
         - name: JDBC_DATABASE_URL
           valueFrom:
