--- a/pipelines/liquibase-pipeline-run.yaml
+++ b/pipelines/liquibase-pipeline-run.yaml
@@ -15,7 +15,7 @@ spec:
     - name: jdbc-database-secret
       value: "<jdbc-database-secret>"
     - name: root-changelog-file
-      value: "example-changelog.sql"
+      value: "<root-changelog-file>"
     - name: environment
       value: "<environment>"
   workspaces:
